Swapped from google guava immutable map to util map Iitem should not be used to expect to track items it is an interface